fix: datatable jquery not responsive, close #184

--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -31,3 +31,6 @@
 .dataTable-container {
     overflow-x:auto
 }
+.dataTables_length {
+    margin-bottom: .5rem;
+}
